1999-05-26  Marcus G. Daniels  <mgd@pojoaque.santafe.edu>

	* Makefile.am (libobjc.dll): New rule.

1999-05-22  Marcus Daniels  <mgd@pajarito.libarts.wsu.edu>

	* ltconfig: Add support for hpux9; generate and compile function
	to call all constructors.

1999-05-20  Marcus G. Daniels  <mgd@pojoaque.santafe.edu>

	* mframe.m: Include sys/sigevent.h if __hpux__ and
	HAVE_SYS_SIGEVENT_H.

	* configure.in: Check for sys/sigevent.h.

1999-05-16  Marcus G. Daniels  <swamsfi@lark.cc.ukans.edu>

	* archive.c, objects.c, selector.c: Include string.h.

1999-05-15  Marcus G. Daniels  <swamsfi@lark.cc.ukans.edu>

	* config/alpha/mframe-generic.h (MFRAME_STACK_STRUCT): Add.
	Add casts from pointer diff to ints for printf args.

1999-05-15  Marcus G. Daniels  <mgd@pojoaque.santafe.edu>

	* Makefile.am (libobjc_la_LIBADD): Add -lgcc.
	(libobjc_la_LDFLAGS): Add -L to libgcc location.  This is to
	resolve symbols like __eprintf on HPUX, where shared library
	linking doesn't go through gcc.

	* config/hppa/{mframe-hpux,compiler-info-hpux}.h: Renamed from
	*hpux10.h.

1999-05-11  Marcus G. Daniels  <mgd@pojoaque.santafe.edu>

	* config/sparc/mframe-solaris2.h (MFRAME_ARG_ENCODING): Return
	to using GET_SPARC_ARG_LOCATION; don't rely on compiler metadata for
	coding signature. Don't do alignment of offsets
	except in the case of stack.

1999-05-10  Marcus G. Daniels  <mgd@pojoaque.santafe.edu>

	* mframe.m (mframe_next_arg): Handle negative offsets (as stack
	offsets).

	* config/hppa/mframe-hpux10.h (MFRAME_ARG_ENCODING): Rewrite.
	Allow negative offsets.  Use existing offsets, stripping register
	designation for floats and doubles.  Handle weird relocation of
	registers not designated for stack, but that underflow the top
	of the region between arg_ptr and argFrame.

	* config/hppa/{mframe,compiler-info}-hpux10.h replace *generic.h.

1999-05-09  Marcus G. Daniels  <mgd@pojoaque.santafe.edu>

	* config/sparc/mframe-solaris2.h (MFRAME_ARG_ENCODING): Disable